# yaalp

./: .gitignore  Brainstorm.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  diagram.mdj  ideas.md
.github/workflows/: rustfmt.yml
include/render/: Viewpart.h  WorldRenderer.h
include/simulation/: Entity.h  Food.h  GameManager.h  IndivSprite.h  Individu.h  IndividuSprite.h  NeuralNetwork.h  ObstacleSprite.h  PlantSprite.h  Sprite.h  World.h  obstacles.h
raalp/: Cargo.toml
raalp/src/: Food.rs  constants.rs  creature.rs  evolution.rs  graphics.rs
src/: Food.rs  constants.rs  creature.rs  graphics.rs  main.rs  utils.rs  world.rs
src/render/: Viewpart.cpp  WorldRenderer.cpp
src/simulation/: Entity.cpp  Food.cpp  GameManager.cpp  IndivSprite.cpp  Individu.cpp  IndividuSprite.cpp  NeuralNetwork.cpp  ObstacleSprite.cpp  PlantSprite.cpp  Sprite.cpp  World.cpp  obstacles.cpp
test_GA/: test_pytorch.py
yaalpy/: constants.py  creature.py  food.py  graphics.py  main.py  quadtree.py  quadtree_animation.py  tests.py  worker.py  world.py
