[package]
name = "yaalp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# notan = "0.9.5"
notan = { git = "https://github.com/Nazariglez/notan", branch = "develop" }
rand = "0.8.5"
strum = "0.24.1"
strum_macros = "0.24.3"
tch = "0.11.0"
ndarray-image = "0.3.0"
# auto-delegate= "0.0.4"
delegate = "0.9.0"